new_tests/semantics/type/bad/022_BE7.cm

def a:String = 'hi' 
def b:String = 'hey' 
a - b 
